# DoubleSumChecker

./: .gitignore  CMakeLists.txt  GenerateSourceCode.py  README.md  list.txt
.github/workflows/: ci.yml  cpp-ci.yml  go-ci.yml  python-ci.yml  rust-ci.yml
docs/: pattern-matrix.md
go/: go.mod
go/agents/: add_agent.go  agents_test.go  interface.go  multiply_agent.go  sub_agent.go
python/: pyproject.toml
python/doublesum/: add_agent.py  base.py  sub_agent.py
python/tests/: test_agents.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: AbstractDoubleSumChecker.cpp  AbstractDoubleSumChecker.hpp  AddDoubleSumChecker.cpp  AddDoubleSumChecker.hpp  AndDoubleSumChecker.cpp  AndDoubleSumChecker.hpp  ConstDoubleSumChecker.cpp  ConstDoubleSumChecker.hpp  CubeSumDoubleSumChecker.cpp  DiffAbsDoubleSumChecker.cpp  DiffAbsDoubleSumChecker.hpp  DiffSquareDoubleSumChecker.cpp  DiffSquareDoubleSumChecker.hpp  EqualDoubleSumChecker.cpp  GcdDoubleSumChecker.cpp  MaxDoubleSumChecker.cpp  MaxDoubleSumChecker.hpp  MinDoubleSumChecker.cpp  MinDoubleSumChecker.hpp  MultiplyDoubleSumChecker.cpp  MultiplyDoubleSumChecker.hpp  NandDoubleSumChecker.cpp  NorDoubleSumChecker.cpp  OrDoubleSumChecker.cpp  OrDoubleSumChecker.hpp  ProjectionDoubleSumChecker.cpp  ProjectionDoubleSumChecker.hpp  SquareSumDoubleSumChecker.cpp  SubDoubleSumChecker.cpp  SubDoubleSumChecker.hpp  SumSquareDoubleSumChecker.cpp  XorDoubleSumChecker.cpp  XorDoubleSumChecker.hpp
tests/: test_AddDoubleSumChecker.cpp  test_AndDoubleSumChecker.cpp  test_ConstDoubleSumChecker.cpp  test_CubeSumDoubleSumChecker.cpp  test_DiffAbsDoubleSumChecker.cpp  test_DiffSquareDoubleSumChecker.cpp  test_EqualDoubleSumChecker.cpp  test_GcdDoubleSumChecker.cpp  test_MaxDoubleSumChecker.cpp  test_MinDoubleSumChecker.cpp  test_MultiplyDoubleSumChecker.cpp  test_NandDoubleSumChecker.cpp  test_NorDoubleSumChecker.cpp  test_OrDoubleSumChecker.cpp  test_ProjectionDoubleSumChecker.cpp  test_SquareSumDoubleSumChecker.cpp  test_SubDoubleSumChecker.cpp  test_SumSquareDoubleSumChecker.cpp  test_XorDoubleSumChecker.cpp
